--- a/css/default_template.css
+++ b/css/default_template.css
@@ -84,14 +84,14 @@ a{
     top: 3px;
 }
 
-.row:after {
+.row_footer:after {
     content: "";
     display: table;
     clear: both;
     
 }
 
-.column {
+.column_footer {
     float: left;
     width: 33.33%;
     padding: 10px;
@@ -200,30 +200,27 @@ li a {
     height: 70px;
 }
 
-.column_school {
-    float: left;
-    width: 30%;
-    padding: 0 10px;
-  }  
-  
-.row_school:after {
-    content: "";
-    display: table;
-    clear: both;
-    
-  }
-  
-  @media screen and (max-width: 600px) {
-.column_school {
-      width: 100%;
-      display: block;
-      margin-bottom: 20px;
-    }
+.card_school {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction:row;
+    justify-content: center;
+    align-content: space-around;
+     
 }
   
-.card_school {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    padding: 16px;
-    text-align: center;
-    background-color: #f1f1f1;
-  }
+.card_school div {
+    width: 360px;
+    height: 400px;
+    margin: 35px;
+    border-radius: 30px;
+    box-shadow: 0 0px 10px 2px #aaaaaa;
+}
+
+#school_photo{
+    width: 100%;
+    height: 70%;
+    border-radius: 30px;
+}
